objects/APTS_Wizard_GofX__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_GofX__c</fullName>
        <label>G(X)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_X_Max__c</fullName>
        <label>X_Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_X_Min__c</fullName>
        <label>X_Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Wizard g(x)</label>
</CustomObject>